...
          ),
          title: Text(
            'Inserta el nombre del usuario que quieres añadir a amigos',
            style: TextStyle(color: myColor),
          ),
          content: TextField(
            key: const Key('friend_name'),
            onChanged: (value) {
              setState(() {
                userInput = value;
              });
            },
            decoration: InputDecoration(
...
                  style: ElevatedButton.styleFrom(
                    backgroundColor: Colors.red,
                  ),
                  child: const Text('Cancelar'),
                ),
                ElevatedButton(
                  key: const Key('confirm'),
                  onPressed: () {
                    sendSolicitud(userInput.trim()).then((int cumplido) {
                      Navigator.of(context).pop();
                      String message = "";
                      switch (cumplido) {
                        case 0:
...
            style: TextStyle(color: peach),
            textAlign: TextAlign.center,
          ),
          actions: <Widget>[
            Center(
              child: ElevatedButton(
                key: const Key('ok'),
                onPressed: () {
                  userInput = "";
                  Navigator.of(context).pop();
                },
                style: ElevatedButton.styleFrom(
                  backgroundColor: Colors.blue,
...
                width: double.infinity,
                padding: const EdgeInsets.all(16),
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.center,
                  children: [
                    const Text(
                      'Amigos',
                      style: TextStyle(
                        fontSize: 42,
                        color: Colors.brown,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
...
                          icon: const Icon(
                            Icons.delete,
                            size: 60,
                          ),
                        ),
                        IconButton(
                          key: const Key('add_friend'),
                          onPressed: () async {
                            bool internet = await conexionInternt(context);
                            if (internet) {
                              enviarSolicitud();
                            }
                          },
...
