...
              width: double.infinity,
              padding: const EdgeInsets.all(20),
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.center,
                children: [
                  Text(
                    'Notificaciones',
                    style: TextStyle(
                      fontSize: 42,
                      color: brown,
                      fontWeight: FontWeight.bold,
                    ),
                  ),
...
                                          child: const Text("Aceptar"),
                                        ),
                                        const SizedBox(
                                          width: 25,
                                        ),
                                        ElevatedButton(
                                          key: const Key('reject'),
                                          onPressed: () {
                                            rechazar(solicitud);
                                          },
                                          style: ElevatedButton.styleFrom(
                                            backgroundColor: Colors.red,
                                            shape: RoundedRectangleBorder(
...
